--- a/forntend/index.html
+++ b/forntend/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>e-learn</title>
     
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> -->
          <script src="https://cdn.tailwindcss.com"></script>   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
@@ -230,10 +229,10 @@
         
         <form id="signin-form">
             <label class="block text-gray-700">Email</label>
-            <input type="email" class="w-full p-2 border rounded-lg mb-3" required title="email">
+            <input id="loginemail" type="email" class="w-full p-2 border rounded-lg mb-3" required title="email">
 
             <label class="block text-gray-700">Password</label>
-            <input type="password" class="w-full p-2 border rounded-lg mb-3" required title="password">
+            <input id="loginpassword" type="password" class="w-full p-2 border rounded-lg mb-3" required title="password">
 
             <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-lg font-semibold hover:bg-blue-500">
                 Sign In
