--- a/forntend/index.html
+++ b/forntend/index.html
@@ -195,13 +195,13 @@
         
         <form id="signup-form">
             <label class="block text-gray-700">Full Name</label>
-            <input type="text" class="w-full p-2 border rounded-lg mb-3" title="fullname" required >
+            <input id="name" type="text" class="w-full p-2 border rounded-lg mb-3" title="fullname" required >
 
             <label class="block text-gray-700">Email</label>
-            <input type="email" class="w-full p-2 border rounded-lg mb-3" title="email" required>
+            <input id="email"  type="email" class="w-full p-2 border rounded-lg mb-3" title="email" required>
 
             <label class="block text-gray-700">Password</label>
-            <input type="password" class="w-full p-2 border rounded-lg mb-3" required title="password">
+            <input id="password"  type="password" class="w-full p-2 border rounded-lg mb-3" required title="password">
 
             <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-lg font-semibold hover:bg-blue-500">
                 Sign Up
