--- a/forntend/your-courses.html
+++ b/forntend/your-courses.html
@@ -66,41 +66,6 @@
         </div>
       </footer>
 </div>
-   <!-- <script>
-document.addEventListener("DOMContentLoaded", function () {
-    loadCheckedOutCourses();
-});
-
-function loadCheckedOutCourses() {
-    // ✅ Retrieve checked-out courses from local storage
-    const enrolledCourses = JSON.parse(localStorage.getItem("checkedOutCourses")) || [];
-    const courseContainer = document.getElementById("your-courses-container");
-    const noCoursesMsg = document.getElementById("no-courses-msg");
-
-    // ✅ Clear previous content to avoid duplication
-    courseContainer.innerHTML = "";
-
-    if (enrolledCourses.length === 0) {
-        noCoursesMsg.classList.remove("hidden"); // Show "No Courses" message
-    } else {
-        noCoursesMsg.classList.add("hidden"); // Hide message
-
-        enrolledCourses.forEach(course => {
-            const courseCard = document.createElement("div");
-            courseCard.classList = "bg-white p-4 shadow-lg rounded-lg text-center";
-
-            courseCard.innerHTML = `
-                <img src="${course.img}" alt="${course.title}" class="w-full h-40 object-cover rounded-lg mb-4">
-                <h3 class="text-lg font-semibold">${course.title}</h3>
-                <p class="text-gray-600 text-sm">$${parseFloat(course.price).toFixed(2)}</p>
-            `;
-            courseContainer.appendChild(courseCard);
-        });
-    }
-}
-
-   </script> -->
-
 
 
    <script>
@@ -126,7 +91,7 @@ function loadCheckedOutCourses() {
             courseCard.classList = "bg-white p-4 shadow-lg rounded-lg text-center";
 
             courseCard.innerHTML = `
-                <img src="${course.img}" alt="${course.title}" class="w-full h-40 object-cover rounded-lg mb-4">
+                <img src="${course.image}" alt="${course.title}" class="w-full h-40 object-cover rounded-lg mb-4">
                 <h3 class="text-lg font-semibold">${course.title}</h3>
                 <p class="text-gray-600 text-sm">$${parseFloat(course.price).toFixed(2)}</p>
             `;
